progress on spotify auth

--- a/client/view/index.html
+++ b/client/view/index.html
@@ -8,7 +8,8 @@
 		<h2> Band name here: </h2>
 		<h2> Song name here: </h2>
 		<h2> Country name here: </h2>
-		<script> 
-		<script> type='text/javascript' src='./scripts/index.js'></script>
+		<button id='search-btn'> Click here for artist ID </button>
+		<button id='trackz-btn'> Click here for trackz </button>
+		<script type='text/javascript' src='../scripts/index.js'></script>
 	</body>
 </html>
